--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,18 @@
 .App {
-  display: flex;
-  background-color: #282c34;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    justify-content:center ;
+    margin-top: 5rem;
 }
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container-page{
   display: flex;
-  flex-direction: column;
+  padding: 1rem 1rem 1rem 1rem;
+  width: 55%;
+  height: 100%;
+  background-color: #E0E0E0;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content:center ;
+  border: 0.3rem solid yellow; 
+  border-radius: 1rem;
 }
