--- a/src/components/table/style.css
+++ b/src/components/table/style.css
@@ -1,23 +1,36 @@
+.container{
+
+  margin:  1rem 1rem 1rem 1rem;
+  border-radius: 1rem;
+}
+
 table {
     justify-content: flex-end;
-    margin: 1rem 1rem 1rem 30rem;
-    width: 50%;
+    width: 100%;
     height: 10%;
     border-collapse: collapse;
   }
   
   thead {
-    background-color: #333;
+    background-color: #FFFF00;
     color: #fff;
   }
-  
+
+  .description{
+    width: 20rem;
+  }
+
   th, td {
-    padding: 10px;
+    padding: 4px;
     text-align: left;
-    border: 1px solid #ccc;
-    color: red;
+    border: 1px solid black;
+    color: black;
   }
   
   tbody tr:nth-child(even) {
     background-color: #f2f2f2;
+  }
+
+  .foot{
+    color: red
   }
