Adicionado condicao de erro caso usuario nao preencha todos os campos

--- a/src/components/Form/style.css
+++ b/src/components/Form/style.css
@@ -1,6 +1,7 @@
 .FormStyle{
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 20rem;
     height: 100%;
     gap: 1rem;
