--- a/src/components/table/style.css
+++ b/src/components/table/style.css
@@ -20,17 +20,25 @@ table {
     width: 20rem;
   }
 
-  th, td {
+  th{
     padding: 4px;
     text-align: left;
     border: 1px solid black;
     color: black;
   }
   
+  td{
+    padding: 4px;
+    text-align: left;
+    border: 1px solid black;
+    color: black;
+  } 
+  
   tbody tr:nth-child(even) {
     background-color: #f2f2f2;
   }
 
   .foot{
+    background-color: #fff;
     color: red
   }
